test/test_examples/syntactic_examples/syntax_error/error_fun_def_03.zig
// Syntax error: missing function identifier token

const ifj = @import("ifj24.zig"); 

pub fn () void {

}  